ac-bend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-bend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-bend
  template:
    metadata:
      labels:
        app:  ac-bend
    spec:
      containers:
        - name: ac-bend
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
          - name: http
            containerPort: 80
