ac-data.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-data
  template:
    metadata:
      labels:
        app: ac-data
    spec:
      containers:
      - name: ac-data
        image: postgres:alpine
        ports:
          - name: http
            containerPort: 5432
