ac-data.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ac-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-data
  template:
    metadata:
      labels:
        app: ac-data
    spec:
      containers:
      - name: ac-data
        image: postgres:alpine
        ports:
          - name: http
            containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: ac-data-pvc
      volumes:
      - name: ac-data-pvc
        persistantVolumeClaim:
          claimName: ac-data-pvc
