ac-fend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-fend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-fend
  template:
    metadata:
      labels:
        app: ac-fend
    spec:
      containers:
        - name: ac-fend
          image: "gcr.io/google-samples/hello-frontend:1.0"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
