ac_data.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ac_data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac_data
  template:
    metadata:
      labels:
        app: ac_data
    spec:
      containers:
      - name: ac_data
        image: postgres:alpine
        ports:
          - name: http
            containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: ac_data-pvc
      volumes:
      - name: ac_data-pvc
        persistantVolumeClaim:
          claimName: ac_data-pvc
