back.deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: back
spec:
  restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app:  back
    spec:
      containers:
        - name: back
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
          - name: http
            containerPort: 80
          resources:
            limits:
              memory: 256M
