db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:alpine
        ports:
          - name: http
            containerPort: 5432
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: postgres-pvc2
