front.deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: front
spec:
  restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
          - containerPort: 8080
          resources:
            limits:
              memory: 128M
