ac-bend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac-bend
spec:
  selector:
    app: ac-bend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
