ac-data.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac-data
spec:
  selector:
    app: ac-data
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
