ac-fend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac-fend
spec:
  selector:
    app: ac-fend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
