ac_bend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac_bend
spec:
  selector:
    app: ac_bend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
