ac_data.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac_data
spec:
  selector:
    app: ac_data
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
