ac_fend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ac_fend
spec:
  selector:
    app: ac_fend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
