front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
