ac_fend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ac_fend
spec:
  rules:
  - host: associable.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ac_fend
            port:
              number: 80
