front.ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  rules:
  - host: asso-ciable.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              name: back
